@@ -164,11 +164,11 @@ static int st_austartread(ft_t ft)
                  * left over from pre-standardize period of testing for
                  * endianess.  Its not hurting though.
                  */
-                ft->info.swap = !ft->info.swap;
+                ft->info.swap_bytes = !ft->info.swap_bytes;
                 st_debug("Found inverted DEC magic word.  Swapping bytes.");
         }
         else if (magic == SUN_INV_MAGIC) {
-                ft->info.swap = !ft->info.swap;
+                ft->info.swap_bytes = !ft->info.swap_bytes;
                 st_debug("Found inverted Sun/NeXT magic word. Swapping bytes.");
         }
         else if (magic == SUN_MAGIC) {
